# AiogramWebAppForm

./: .gitignore  README.md  pyproject.toml
app/: abc.py  form.py  web_server.py  webapp.py  webapp_ui.py
app/templates/: form.html
examples/: form.py
telegram_webapp_ui/: abc.py  form.py  webapp.py
telegram_webapp_ui/statics/css/: form.css
telegram_webapp_ui/templates/: form.html
templates/: form.html
