[tool.poetry]
name = "aiogram-webapp-ui"
version = "0.1.0"
description = ""
authors = ["Mikky07 <mesarevartem9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.3"
starlette = "^0.37.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
